--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.11",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
